[tool.poetry]
name = "proxmoxbalancer"
version = "1.3.0"
description = "VM balancer"
authors = ["Skylar Kelty <skylar.kelty@kcl.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
proxmoxer = "^1.1.1"
locket = "^0.2.1"
requests = "^2.25.1"
paramiko = "^2.7.2"
PyYAML = "^5.4.1"
sci-common = "^0.6.1"
hvac = "0.10.7"

[tool.poetry.dev-dependencies]
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
nose = "^1.3.7"
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pvebalance = 'proxmoxbalancer:balance'

[[tool.poetry.source]]
name = "py-sci-common"
url = "https://gitlab.er.kcl.ac.uk/api/v4/projects/18/packages/pypi/simple"
secondary = true
